Revision history for Range-SetOps

{{$NEXT}}
    - Initial version